[gd_scene load_steps=5 format=3 uid="uid://cs8byd3a2fa87"]

[ext_resource type="Texture2D" uid="uid://bauhkmploqpd" path="res://assets/brown_plant_pot.png" id="2_chx76"]
[ext_resource type="Script" path="res://scripts/draganddrop.gd" id="2_r8c8b"]
[ext_resource type="Texture2D" uid="uid://cfuesvxdlggks" path="res://assets/bud_cactus.png" id="3_mhgt1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0ggb1"]
radius = 30.0

[node name="plant_jar" type="Node2D"]
script = ExtResource("2_r8c8b")

[node name="plant_pot" type="Sprite2D" parent="."]
position = Vector2(0, -54)
texture = ExtResource("2_chx76")

[node name="Area2D" type="Area2D" parent="plant_pot"]
position = Vector2(0, 120)
scale = Vector2(10, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="plant_pot/Area2D"]
position = Vector2(-6, 29)
shape = SubResource("CircleShape2D_0ggb1")

[node name="growth_timer" type="Timer" parent="plant_pot"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="water_timer" type="Timer" parent="plant_pot"]
autostart = true

[node name="plant_health" type="ProgressBar" parent="plant_pot"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.123
anchor_bottom = 0.701
offset_left = -1297.0
offset_top = -551.0
offset_right = -2135.9
offset_bottom = -887.648
grow_horizontal = 2
grow_vertical = 2
max_value = 30.0
step = 1.0
rounded = true
show_percentage = false

[node name="plant" type="Sprite2D" parent="."]
position = Vector2(-14, -50)
texture = ExtResource("3_mhgt1")

[connection signal="area_entered" from="plant_pot/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="plant_pot/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="plant_pot/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="plant_pot/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="plant_pot/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="plant_pot/Area2D" to="plant_pot/Area2D/CollisionShape2D" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="plant_pot/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="plant_pot/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="plant_pot/growth_timer" to="." method="_on_growth_timer_timeout"]
[connection signal="timeout" from="plant_pot/growth_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="plant_pot/water_timer" to="." method="_on_water_timer_timeout"]
